# fastapi-starter

./: .env  .gitignore  README.md  alembic.ini  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 0c22580da24b_init_db.py  1ed6c48a7ca8_update_db.py  2359ba00f1c5_update_db.py  588cca5b1c70_init_db.py  6482823da8b3_update_db.py  68d0b8738895_update_db.py  6ffed7292def_update_db.py  77e91aff819b_init_db.py  8929b363f36d_update_db.py  9fbe05d43a8f_init_db.py  c7a3ca9a96f9_update_db.py  ca85dbb1e5c2_init_db.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: authen.py  status.py  users.py
app/core/: config.py  exception_handler.py  http.py
app/crud/: __init__.py  base.py  crud_item.py  crud_user.py  crud_user_profile.py
app/db/: base.py  base_class.py  session.py
app/db/alembic/: env.py
app/models/: __init__.py  base.py  db_article.py  db_item.py  db_user.py  db_user_profile.py  item.py  user.py
app/resources/: strings.py
app/schemas/: __init__.py  base.py  user.py
app/utils/: __init__.py
env/: prod.env  stag.env
fastapi_starter/: main.py
fastapi_starter/api/: deps.py
fastapi_starter/api/v1/: router.py
fastapi_starter/core/: config.py  exception_handler.py  http.py  security.py
fastapi_starter/crud/: __init__.py  base.py  crud_item.py  crud_user.py  crud_user_profile.py
fastapi_starter/db/: session.py
fastapi_starter/models/: __init__.py  base.py  db_article.py  db_item.py  db_user.py  db_user_profile.py
fastapi_starter/schemas/: __init__.py  base.py  success.py  user.py  user_profile.py
fastapi_starter/utils/: __init__.py
(+3 files in other folders)
