[tool.poetry]
name = "fastapi-starter"
version = "1.0.0"
description = "FastAPI Starter Kit"
authors = ["Nhat Tran Van <nhat.tv16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.6.5"
psycopg2-binary = "^2.8.6"
sqlalchemy = "^1.4.20"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
gunicorn = "^20.1.0"
pydantic = "^1.8.2"
emails = "^0.6"
email-validator = "^1.1.3"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
celery = "^5.1.2"
bcrypt = "^3.2.0"
jinja2 = "^3.0.1"
hypercorn = "^0.11.2"
redis = "^3.5.3"
aiohttp = "^3.6.3"
python-dotenv = "^0.18.0"
cryptography = "^39.0.1"
python-dateutil = "^2.8.1"
APScheduler = "^3.7.0"
tenacity = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pylint = "^2.9.3"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"