[tool.poetry]
name = "fastapi-starter"
version = "0.1.0"
description = ""
authors = ["Nhat Tran <nhat.tv16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.6.5"
psycopg2-binary = "^2.8.6"
sqlalchemy = "^2.0.35"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic = "^1.8.2"
emails = "^0.6"
email-validator = "^2.2.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.7"
celery = "^5.1.2"
bcrypt = "^3.2.0"
jinja2 = "^3.0.1"
redis = "^3.5.3"
aiohttp = "^3.6.3"
python-dotenv = "^1.0.1"
cryptography = "^43.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
